--- a/syntax/TemplateStrings/index.html
+++ b/syntax/TemplateStrings/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-    <script src="spread.js"></script>
+<script type="text/javascript" src="templatestring.js"></script>
 </body>
 </html>
