--- a/syntax/arrow/arrow.html
+++ b/syntax/arrow/arrow.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-    <script src="spread.js"></script>
+    <script src="arrow.js"></script>
 </body>
 </html>
